--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>test</title>
+<title>Site Stray Kids forcé</title>
 </head>
 <body>
-<h1>§§§§§§Voici mon petit site pour stray kids ! (pas forcer par ma soeur(c'est completement faux !!!!!!!))§§§§§§</h1
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/P7vBoGWoReg?si=o8NGLou_UDvZ5MKW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h1>§§§§§§Voici mon petit site pour Stray Kids ! (pas forcer par ma soeur(c'est completement faux !!!!!!!))§§§§§§</h1
+<p> </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sXrK-mP_G9U?si=S99oMr-d9rkdWGra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <p>malhereusement vous pouvez pas vous moquer y'a une personne tres dangereuse...</p>
 <p>musique a désiré</p>
-<h3>suite des musqiues a désirés</h1>
+<h3>suite des musiques a désirés</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OvioeS1ZZ7o?si=EyYMCsDqIQotKZ5r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <p>musique un peu mieux (mais a écouté avec moderation)</p>
 <h3>musique si tu veux du nouveau (+romance)</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/wPD4AxkqJkE?si=xrGK31RdxcDG2FkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <p>y'a une sponso mais tkt</p>
+<h3>pied entre Stray Kids et DJ Snake</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yv8g9GE9VAY?si=Ir3HNT5IH08GaaSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </html>
-
-
-
-
-
-
-
-
-
-
