--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Site Stray Kids forcé</title>
+    <title>Site Stray Kids forcé</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<h1>§§§§§§Voici mon petit site pour Stray Kids ! (pas forcer par ma soeur(c'est completement faux !!!!!!!))§§§§§§</h1
-<p> </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sXrK-mP_G9U?si=S99oMr-d9rkdWGra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p>malhereusement vous pouvez pas vous moquer y'a une personne tres dangereuse...</p>
-<p>musique a désiré</p>
-<h3>suite des musiques a désirés</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OvioeS1ZZ7o?si=EyYMCsDqIQotKZ5r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p>musique un peu mieux (mais a écouté avec moderation)</p>
-<h3>musique si tu veux du nouveau (+romance)</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/wPD4AxkqJkE?si=xrGK31RdxcDG2FkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<p>y'a une sponso mais tkt</p>
-<h3>pied entre Stray Kids et DJ Snake</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Yv8g9GE9VAY?si=Ir3HNT5IH08GaaSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>§§§§Voici mon petit site Stray Kids ! (pas forcé par ma soeur(c'est complètement faux !!!!!!!))§§§§</h1>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sXrK-mP_G9U?si=S99oMr-d9rkdWGra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>malheureusement vous ne pouvez pas vous moquer, y'a une personne très dangereuse...</p>
+    <p>musique à désiré</p>
+
+    <h3>suite des musiques à désirés</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/OvioeS1ZZ7o?si=EyYMCsDqIQotKZ5r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>musique un peu mieux (mais à écouter avec modération)</p>
+
+    <h3>musique si tu veux du nouveau (+romance)</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wPD4AxkqJkE?si=xrGK31RdxcDG2FkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>y'a une sponso mais tkt</p>
+
+    <h3>pied entre Stray Kids et DJ Snake</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yv8g9GE9VAY?si=Ir3HNT5IH08GaaSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
 </html>
