--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
     <h3>feat entre Stray Kids et DJ Snake</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yv8g9GE9VAY?si=Ir3HNT5IH08GaaSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <a href="https://youtu.be/mvRakg4Qug4?si=Rn08G7VokLcwDOBo">pour savoir qui chante</a>
+    <p><a href="https://youtu.be/mvRakg4Qug4?si=Rn08G7VokLcwDOBo">pour savoir qui chante</a></p>
 </body>
 </html>
