--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,6 @@
     <img src="skz_groupe_3.jpg" alt=" ">
     <h2>membres</h2>
 
-    <a href="index.html">retour</a>
+    <p><a href="index.html">retour</a></p>
 </body>
 </html>
