--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Yv8g9GE9VAY?si=Ir3HNT5IH08GaaSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p><a href="https://youtu.be/mvRakg4Qug4?si=Rn08G7VokLcwDOBo">pour savoir qui chante</a></p>
 
-    <a href="gallery.html">gallerie</a>
+    <p><a href="gallery.html">gallerie</a></p>
 </body>
 </html>
